# aine

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  context.md  index.html
.github/workflows/: ci.yml
cmake/: atl-integration.cmake  platform.cmake  toolchain-linux.cmake  toolchain-macos.cmake
docs/: .atl-last-synced  QUICK-REFERENCE.md  ROADMAP-IMPLEMENTACION.md  blockers.md
docs/ai-agents/: AGENTS.md
docs/ai-agents/prompts/: atl-sync-eval.md  cross-platform-debug.md  hal-bridge.md  syscall-shim.md
docs/context/: 01-project-overview.md  02-technical-stack.md  03-development-workflow.md  04-legal-licenses.md  05-atl-reference.md  06-multiplatform-linux.md  07-fork-strategy.md
docs/milestones/: M0-toolchain.md  M1-art-boots.md  M2-binder.md  M3-first-app.md
docs/wiki/: Binarios-Compilados.md
scripts/: build.sh  fork-setup.sh  gen-aine-res.py  init.sh  run-apk.sh  run-app.sh  setup-deps-linux.sh  setup-deps.sh  sync-atl.sh
src/aine-binder/: CMakeLists.txt  binder-client.cpp  binder-daemon.cpp  parcel.cpp
src/aine-binder/common/: binder-protocol.cpp  parcel.cpp  parcel.h  service-manager.cpp
src/aine-binder/include/: aine-binder.h
src/aine-binder/linux/: ashmem-compat.cpp  binder-daemon.cpp  eventfd-compat.cpp
src/aine-binder/macos/: binder-client.cpp  binder-daemon.cpp  mach-transport.cpp  mach-transport.h
src/aine-dalvik/: CMakeLists.txt  canvas.h  canvas.m  dex.c  dex.h  handler.c  handler.h  heap.c  heap.h  interp.c  interp.h  jni.c  jni.h  layout.c  layout.h  main.c  window.h  window.m
src/aine-hals/: CMakeLists.txt
src/aine-hals/audio/: CMakeLists.txt  audio_track.c  audio_track.h  audioflinger.c  audioflinger.h
src/aine-hals/camera/: CMakeLists.txt  camera_hal.h  camera_hal.m
src/aine-hals/clipboard/: CMakeLists.txt  clipboard_hal.h  clipboard_hal.m
src/aine-hals/input/: CMakeLists.txt  input_event.h  input_keymap.c  input_keymap.h  inputflinger.c  inputflinger.h  keyboard.h  keyboard.mm  pointer.h  pointer.mm
src/aine-hals/libandroid/: CMakeLists.txt  asset_manager.c  looper.c  native_activity.c
src/aine-hals/libegl/: CMakeLists.txt  egl.m
src/aine-hals/libegl/include/EGL/: egl.h  eglplatform.h
src/aine-hals/libgles2/: CMakeLists.txt  gles2.c
src/aine-hals/libgles2/include/GLES2/: gl2.h
src/aine-hals/liblog/: CMakeLists.txt  log.c
src/aine-hals/linux/: CMakeLists.txt
src/aine-hals/macos/: CMakeLists.txt
src/aine-hals/macos/audio/: AudioHAL.mm
src/aine-hals/macos/camera/: CameraHAL.mm
src/aine-hals/macos/graphics/: GraphicsHAL.mm
src/aine-hals/macos/input/: InputHAL.mm
src/aine-hals/surface/: CMakeLists.txt  surface.m
src/aine-hals/surface/include/: aine_surface.h
src/aine-hals/surfaceflinger/: CMakeLists.txt  sf.c  surfaceflinger.h
src/aine-hals/vsync/: CMakeLists.txt  vsync.h  vsync.m
src/aine-hals/vulkan/: CMakeLists.txt  vulkan_hal.h  vulkan_hal.m
src/aine-launcher/: CMakeLists.txt  aine-run.c
src/aine-launcher/macos/: launcher.cpp
src/aine-loader/: CMakeLists.txt  loader.c  loader.h  main.c  path_map.c  path_map.h
src/aine-pm/: CMakeLists.txt  apk.c  apk.h  axml.c  axml.h  main.c  pm.c  pm.h  zip.c  zip.h
src/aine-shim/: CMakeLists.txt  ashmem.c  binder-dev.c  epoll.c  eventfd.c  futex.c  proc.c
src/aine-shim/common/: aine-shim.c  logging.c
src/aine-shim/include/linux/: ashmem.h  memfd.h
src/aine-shim/include/sys/: epoll.h  eventfd.h  inotify.h
src/aine-shim/linux/: binder-dev.c  passthrough.c  platform.c
src/aine-shim/macos/: ashmem.c  binder-dev.c  epoll.c  eventfd.c  futex.c  inotify.c  platform.c  prctl.c  proc.c  signalfd.c  timerfd.c
test-apps/ArcsApp/: classes.dex
test-apps/Calc/: README.md  keyCalc123.jks
test-apps/Calc/app/: build.gradle.kts
test-apps/Calc/app/release/: output-metadata.json
test-apps/Calc/app/release/baselineProfiles/0/: app-release.dm
test-apps/Calc/app/release/baselineProfiles/1/: app-release.dm
test-apps/Calc/app/src/main/res/layout/: activity_main.xml
test-apps/Calc/app/src/main/res/values/: strings.xml
test-apps/Calc/dex-debug/: classes2.dex  classes3.dex  classes4.dex
test-apps/Calc/gradle/: libs.versions.toml
test-apps/Calc/gradle/wrapper/: gradle-wrapper.properties
test-apps/CalcApp/: classes.dex
test-apps/CalcApp/src/com/example/calc/: CalcActivity.java
test-apps/Calc_Java/: .gitignore  README.md
test-apps/Calc_Java/app/: build.gradle.kts
test-apps/Calc_Java/dex-debug/: aine-res.txt
test-apps/Calc_Java/dex-debug/res/layout/: activity_main.xml
test-apps/Calc_Java/gradle/: libs.versions.toml
test-apps/Calc_Jetpack/: .gitignore  README.md  settings.gradle.kts
test-apps/Calc_Jetpack/app/: build.gradle.kts
test-apps/Calc_Jetpack/app/src/main/: AndroidManifest.xml
test-apps/Calc_Jetpack/gradle/: libs.versions.toml
test-apps/DalvikTest/: Main.java  classes.dex
test-apps/G2Test/: G2Test.java  classes.dex
test-apps/G3Test/: G3Test.java  classes.dex
test-apps/G4Test/: G4Test.java  classes.dex
test-apps/G5WindowTest/: G5WindowActivity.java  classes.dex
test-apps/G6RealActivity/: G6RealActivity.java  classes.dex
test-apps/G7DrawApp/: G7DrawActivity.java  classes.dex
test-apps/HandlerTest/: HandlerTest.java  classes.dex
test-apps/HelloWorld/: HelloWorld.dex  HelloWorld.java
test-apps/M3Lifecycle/: M3LifecycleTest.java  classes.dex
test-apps/M3TestApp/: AndroidManifest.xml  M3TestApp.apk  M3TestApp.apk.idsig  build.sh
test-apps/M3TestApp/src/com/aine/testapp/: MainActivity.java
test-apps/native-stub/: CMakeLists.txt  native_stub.c
tests/: CMakeLists.txt
tests/binder/: CMakeLists.txt  test_binder_roundtrip.cpp
tests/dalvik/: CMakeLists.txt
tests/linux/: CMakeLists.txt
tests/loader/: CMakeLists.txt  test_loader.c
tests/macos/: CMakeLists.txt  test_audio.c  test_egl_headless.m  test_f12_hals.c  test_input.c
tests/pm/: CMakeLists.txt  test_pm.c
tests/shared/: CMakeLists.txt  test_binder_protocol.cpp
tests/shim/: CMakeLists.txt  test_epoll.c  test_eventfd.c  test_futex.c  test_prctl.c
(+17 files in other folders)
